[package]
name = "geoutils"
edition = "2018"
version = "0.4.0"
description = "A collection of geo computation utilities"
repository = "https://github.com/srishanbhattarai/geoutils"
readme = "README.md"
license = "Apache-2.0"
keywords = ["geolib", "geolocation", "geofence"]
authors = ["Srishan Bhattarai <srishanbhattarai@gmail.com>"]

[badges]
travis-ci = { repository = "srishanbhattarai/geoutils" }


[dependencies]
